--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.raccoon.tflite.flutter_detector">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -7,10 +7,9 @@
 
     <application
         tools:replace="android:name"
-        android:name="com.chaquo.python.android.PyApplication"
+        android:name="io.flutter.app.FlutterApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="TFlite Detector">
-        android:requestLegacyExternalStorage="true"
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
@@ -37,4 +36,3 @@
             android:value="2" />
     </application>
 </manifest>
-    <!--android:name="io.flutter.app.FlutterApplication"-->
