--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,12 +3,15 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url "https://chaquo.com/maven" }
+
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.3'
+        classpath "com.chaquo.python:gradle:9.1.0"
     }
 }
 
@@ -16,6 +19,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+
     }
 }
 
