--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   flutter_bloc: ^6.0.4
   provider: ^4.3.2+1
   equatable: ^1.2.4
+
+  dio: ^4.0.0
   # detector
   path_provider: ^1.6.14
   tflite: ^1.1.1
@@ -30,7 +32,10 @@ dependencies:
   permission_handler: ^5.0.1+1
   # UI
   flushbar: ^1.10.4
-
+  http: ^0.13.3
+  chaquopy: ^0.0.11
+  image_gallery_saver: ^1.6.9
+  flutter_file_manager: ^0.2.0
   # custom fixed exif rotation plugin
   flutter_exif_rotation:
     git:
